--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 name = "tcp2quic"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["zephyr <i@zephyr.moe>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rcgen = "0.8"
-futures = "0.3"
-tokio = {version = "1.7", features = ["rt", "net", "io-util", "macros"]}
-quinn = "0.7"
-rustls = { version = "0.19", features = ["dangerous_configuration", "quic"] }
-webpki = "0.21"
+rcgen = "0.14"
+tokio = {version = "1.40", features = ["rt", "net", "io-util", "macros", "rt-multi-thread"]}
+quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
+rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
+webpki-roots = "0.26"
